--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  --line-color: #e5e7eb;
+}
 .overflow-y-scroll::-webkit-scrollbar {
   @apply hidden;
 }
